<resources>
    <string name="app_name">Deals Plus</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email_hint">Email</string>
    <string name="spin">Category</string>
    <string name="select_category">Select Category</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_account"><u> Create one</u></string>
    <string name="already_member">Already a member? Login</string>
    <string name="sign_up">No Account yet?\ \</string>
    <string name="sign_up1">Sign up</string>
    <string name="login">Login</string>
    <string name="select_image">Offer\'s Image</string>
    <string name="set_image">Select Image</string>
    <string name="fromDate">From Date:</string>
    <string name="toDate">To Date:</string>
    <string name="action_logout">Logout</string>
    <string name="upload_brochure">Upload Brochure</string>
    <string name="disc_item">Discount Item</string>
    <string name="rate">Rate</string>
    <string name="disc_rate">Discounted Rate</string>
    <string name="upload_Discount_offer">Upload Discount Offer</string>
    <string name="disc_Description">Discount Description</string>
    <string name="imageOffer">Add Image Offer</string>
    <string name="discountOffer">Add Discount Deal</string>
    <string name="stats"><![CDATA[Stats & Reports]]></string>


</resources>
