<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@mipmap/bg_dark">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:elevation="20dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="10dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardUseCompatPadding="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/logo_dealplus_colored" />

            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="15dp">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Re-enter Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="15dp">
                <EditText android:id="@+id/input_reEnterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/re_enter_password"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Category Entry-->
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/android_material_design_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_category"
                android:textColorHint="@color/textHints"
                android:entries="@array/spinnerItems"
                app:met_floatingLabel="normal"
                app:met_textColorHint="@color/textHints"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="15dp"/>

            <!-- mobile number -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="15dp">
                <EditText android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/mobile_number" />
            </android.support.design.widget.TextInputLayout>



            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/mybutton"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/sign_up1"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView android:id="@+id/link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/already_member"
                android:gravity="center"
                android:textSize="16dip"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</ScrollView>