<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:padding="2dp"
            >

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivImage"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        android:layout_marginLeft="2dp"
                        android:src="@mipmap/ic_uploadbrochureimage_ph"/>
                    <!--android:background="@drawable/image_view_borders"-->

                    <ImageView
                        android:id="@+id/ivImage1"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        android:layout_marginLeft="7dp"
                        android:src="@mipmap/ic_uploadbrochureimage_ph" />

                    <ImageView
                        android:id="@+id/ivImage2"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        android:layout_marginLeft="7dp"
                        android:src="@mipmap/ic_uploadbrochureimage_ph" />

                    <ImageView
                        android:id="@+id/ivImage3"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        android:layout_marginLeft="7dp"
                        android:src="@mipmap/ic_uploadbrochureimage_ph" />
                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>

        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/cam_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:text="@string/set_image"-->
            <!--android:textColor="@android:color/white" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cam_button"
            android:layout_alignStart="@+id/cam_button"
            android:layout_below="@+id/ivImage"
            android:layout_margin="10dp"
            tools:ignore="NotSibling"
            android:id="@+id/textInputLayout"
            android:focusable="false"
            android:focusedByDefault="false">

            <EditText
                android:id="@+id/from_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusedByDefault="false"
                android:hint="@string/fromDate"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textInputLayout"
            android:layout_alignStart="@+id/textInputLayout"
            android:layout_below="@+id/textInputLayout"
            android:focusable="false"
            android:focusedByDefault="false"
            tools:ignore="NotSibling"
            >
            <EditText
                android:id="@+id/to_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/toDate"
                android:inputType="date"
                android:focusable="false"
                android:focusedByDefault="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/upload_imgoffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/upload_brochure"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>